# adventofcode-2022

./: Cargo.toml  get_input.py  rustfmt.toml
python/: 1.py
src/: day_template.rs  lib.rs  main.rs
src/days/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day16.rs  day18.rs  day21.rs  day22.rs  mod.rs
