[package]
name = "aoc"
default-run = "aoc"
version = "0.1.0"
authors = ["Dmitry Panin <pank.dm@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.1"
serde_scan = "0.4.0"
regex = "1.4.2"
num-bigint = "0.3.1"
